# codal-microbit

./: CMakeLists.txt  target.json
asm/: nrf51822.s
bluetooth/inc/: MicroBitBLEManager.h
bluetooth/src/: MicroBitBLEManager.cpp  MicroBitEventService.cpp  MicroBitIOPinService.cpp
inc/: MicroBitFlash.h  MicroBitRadio.h  NRF51I2C.h  NRF51Pin.h  NRF51Timer.h  PinMap.h  ZSingleWireSerial.h  device_pinmap.h  nrf51_interrupts.h
inc/compat/: MicroBitCompat.h
model/: MicroBit.cpp  MicroBit.h  MicroBitIO.cpp  MicroBitIO.h
source/: MicroBitCompassCalibrator.cpp  MicroBitFlash.cpp  MicroBitRadio.cpp  MicroBitRadioDatagram.cpp  MicroBitStorage.cpp  MicroBitThermometer.cpp  NRF51I2C.cpp  NRF51Pin.cpp  NRF51Timer.cpp  ZSingleWireSerial.cpp  codal_target_hal.cpp  nrf51_interrupts.cpp
